# Habana_Custom_Kernel

./: dict_to_json.py
kernels/include/: quantize_bwd.h  quantize_fwd.h
scripts/: build_and_run.sh
src/gaudi_src/: quantize_f32.cpp  quantize_f32.hpp
tests/: CMakeLists.txt  tensor.h  test_base.cpp
tests/gaudi_test/: quantize_f32_test.cpp
